--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,17 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 1em;
+    padding-top: .5em;
     font-size: clamp(.5rem, 2.5vmin, 1.5rem);
+}
+
+.header{
+    display: flex;
+    justify-content: center;
+}
+
+.title {
+    color: white
 }
 
 .keyboard {
